fixed scrollbar

--- a/map-app/src/app/map/map.component.css
+++ b/map-app/src/app/map/map.component.css
@@ -115,3 +115,25 @@ ul {
   padding: 0;
   list-style-type: none;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 1px rgba(128, 128, 128, 0.171);
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(43, 42, 42);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #3f3f3f;
+}
